--- a/_13_I18N/baitap/baitap/src/main/resources/msg/language_vi.properties
+++ b/_13_I18N/baitap/baitap/src/main/resources/msg/language_vi.properties
@@ -1,1 +1,7 @@
 list.title=Danh sách khách hàng
+list.id=ID
+list.name=Tên
+list.dob= Ngày Sinh
+list.phone=S? ?i?n tho?i
+list.actiondelete=Xóa
+list.actionedit=S?a
